fixed a bunch of sonar code smells & made method searching about 2x faster